force-app/main/default/objects/Alert_Criteria__c/Alert_Criteria__c.object-meta.xml
<CustomObject>
    <label>Alert Criteria</label>
    <nameField>
        <displayFormat>AC-{00000000}</displayFormat>
        <label>Alert Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alert Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>