force-app/main/default/objects/Alert_Criteria__c/fields/Aggregate_Expression__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Expression__c</fullName>
    <description>This must be used if Field Name is set to AGGREGATE</description>
    <inlineHelpText>This must be used if Field Name is set to AGGREGATE</inlineHelpText>
    <label>Aggregate Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>