force-app/main/default/objects/Alert_Criteria__c/fields/Alert__c.field-meta.xml
<CustomField>
    <fullName>Alert__c</fullName>
    <label>Alert</label>
    <referenceTo>Alert__c</referenceTo>
    <relationshipLabel>Alert Criteria</relationshipLabel>
    <relationshipName>Alert_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>