force-app/main/default/objects/Alert_Criteria__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <formula>Field_Name__c + &quot; &quot;+ TEXT( Operator__c ) + &quot; &quot; + Value__c</formula>
    <label>Criteria</label>
    <type>Text</type>
</CustomField>