force-app/main/default/objects/Alert_Criteria__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>not equals</fullName>
            </value>
            <value>
                <fullName>greater</fullName>
            </value>
            <value>
                <fullName>greater or equals</fullName>
            </value>
            <value>
                <fullName>less</fullName>
            </value>
            <value>
                <fullName>less or equals</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>