force-app/main/default/objects/Alert_Criteria__c/validationRules/Aggregate_Function_Limit_Per_Alert.validationRule-meta.xml
<ValidationRule>
    <fullName>Aggregate_Function_Limit_Per_Alert</fullName>
    <active>true</active>
    <errorConditionFormula>Alert__r.Aggregate_Count__c &gt;= 1</errorConditionFormula>
    <errorMessage>In order to control performance, you cannot have more than one aggregate function per alert.</errorMessage>
</ValidationRule>